src/components/Post/Post.module.scss
.Post {
  width: 100%;
  padding: 15px;
  background: white;

  &__tooltip {
    background: white !important;
    padding: 12px 16px !important;

    box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15) !important;
    opacity: 1 !important;
  }

  &__header {
    display: flex;
    justify-content: space-between;
    margin-bottom: 10px;

    &Content {
      display: flex;
      flex-direction: column;
    }
  }

  &__myPost {
    display: flex;
    justify-content: end;
    gap: 12px;
    margin-top: 30px;

    &Button {
      height: fit-content;
      border-radius: 5px;
      font-family:
        Inter UI,
        sans-serif;
      font-size: 14px;
      font-style: normal;
      font-weight: 400;
      padding: 6px 17px;
      line-height: normal;

      &Delete {
        border: 1px solid #f5222d;
        color: #f5222d;
      }
      &Edit {
        border: 1px solid #52c41a;
        color: #52c41a;
      }
    }
  }

  &__headingWrapper {
    display: flex;
    align-items: center;
  }

  &__title {
    color: #1890ff;
    font-size: 20px;
    font-style: normal;
    font-weight: 400;
    line-height: 28px; /* 140% */

    &Long {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      width: 500px;
    }
  }

  &__like {
    margin-left: 13px;
  }

  &__tags {
    margin-top: 5px;
    display: flex;
    gap: 5px;
  }

  &__body {
    color: rgba(0, 0, 0, 0.75);
    font-size: 12px;
    font-style: normal;
    font-weight: 400;
    line-height: 22px; /* 183.333% */
    word-wrap: break-word;

    &Long {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      width: 500px;
    }
  }
}

